--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.7"
+    "astro": "^5.16.7",
+    "gsap": "^3.14.2",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
